# xc3-file-loader

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml
res/npdm/: torna.json  xc2-jp.json  xc2-ww.json  xc3.json  xc3.npdm  xcde.json  xcxde.json
res/test/: test_font.wifnt
scripts/: install-npdmtool.sh
src/: arh1.rs  arh2.rs  hash.rs  lib.rs  loader.rs  util.rs
