[package]
name = "xcnx-file-loader"
version = "2.0.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"
license = "gpl-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
anyhow = "1.0"
twox-hash = { version = "2.1", default-features = false, features = ["xxhash3_64", "std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
strip = true
