[package]
name = "xcnx-file-loader"
version = "2.0.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"
license = "gpl-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
anyhow = "1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
strip = true
